tests/baselines/reference/tsxGenericAttributesType1.errors.txt
tests/cases/conformance/jsx/file.tsx(8,45): error TS2339: Property 'x' does not exist on type 'IntrinsicAttributes & T & { children?: ReactNode; }'.
tests/cases/conformance/jsx/file.tsx(12,34): error TS2339: Property 'x' does not exist on type 'IntrinsicAttributes & T & { children?: ReactNode; }'.


==== tests/cases/conformance/jsx/file.tsx (2 errors) ====
    import React = require('react');
    
    const decorator = function <T>(Component: React.StatelessComponent<T>): React.StatelessComponent<T> {
        return (props) => <Component {...props}></Component>
    };
    
    const decorator2 = function <T extends { x: number }>(Component: React.StatelessComponent<T>): React.StatelessComponent<T> {
        return (props) => <Component {...props} x={2} ></Component>
                                                ~~~~~
!!! error TS2339: Property 'x' does not exist on type 'IntrinsicAttributes & T & { children?: ReactNode; }'.
    };
    
    const decorator3 = function <T extends { x: number }, U extends { x: number } >(Component: React.StatelessComponent<T>): React.StatelessComponent<T> {
        return (props) => <Component x={2} {...props} ></Component>
                                     ~~~~~
!!! error TS2339: Property 'x' does not exist on type 'IntrinsicAttributes & T & { children?: ReactNode; }'.
    };